--- a/PhenoPad/CustomControl/NoteLineViewControl.xaml
+++ b/PhenoPad/CustomControl/NoteLineViewControl.xaml
@@ -86,10 +86,10 @@
         </Flyout>
     </UserControl.Resources>
     
-    <Grid x:Name="rootGrid" Margin="0 10 0 10" MaxHeight="100" Background="Transparent">
+    <Grid x:Name="rootGrid" Margin="0 10 0 10" MaxHeight="300" Background="Transparent" >
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="105"/>
             <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="500"/>
             <ColumnDefinition Width="300"/>
@@ -102,8 +102,8 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
-            <TextBlock x:Name="KeyTime" Grid.Row="0" FontSize="8" />
-            <TextBlock x:Name="KeyLine" Grid.Row="1" FontSize="4" />
+            <TextBlock x:Name="KeyTime" Grid.Row="0" FontSize="10" />
+            <TextBlock x:Name="KeyLine" Grid.Row="1" FontSize="20" />
 
         </Grid>
         
@@ -118,18 +118,21 @@
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
-
+            
             <Grid x:Name="strokeGrid" x:FieldModifier="public" BorderThickness="0" Grid.Row="0" Grid.Column="0"
                   CornerRadius="5" BorderBrush="Black" Padding="10">
                 <InkCanvas x:Name="strokeCanvas" x:FieldModifier="public"  />
-            </Grid>
+            </Grid> 
             <Grid x:Name="addinGrid" x:FieldModifier="public" BorderThickness="0" CornerRadius="5" BorderBrush="Black" 
                   Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2">
                 <Viewbox Name="AddInIcon" Width="200" Height="200" CanDrag="False"/>
             </Grid>
 
-            <StackPanel x:Name="recogPhraseStack" Grid.Column="0" Grid.Row="1"
-                        Orientation="Horizontal" Spacing="5" />
+                <StackPanel x:Name="recogPhraseStack" Grid.Column="0" Grid.Row="1"
+                        Orientation ="Horizontal" Spacing="5" ></StackPanel>
+
+
+
         </Grid>
 
         <Grid x:Name="chatGrid" x:FieldModifier="public" Grid.Column="3" VerticalAlignment="Top"
