--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -339,6 +339,14 @@
                                 <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE8F2;"/>
                             </Grid>
                         </ToggleButton>
+                        <ToggleButton Style="{StaticResource MyToggleButtonStyle}" 
+                                      ToolTipService.ToolTip="Editing notes" 
+                                      Background="{StaticResource Left_Panel_Title_BG}"  Width="40" Height="80" 
+                                      Name="NoteEditToggleButton" Click="NoteEditToggleButton_Click">
+                            <Grid>
+                                <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE71D;"/>
+                            </Grid>
+                        </ToggleButton>
                     </StackPanel>
                     <!--BUTTOM  Tab buttons-->
                     <StackPanel  Orientation="Vertical" 
@@ -640,7 +648,180 @@
                             </ListView.ItemTemplate>
                         </local:ChatListView>
                     </Grid>
+                    <!--INFORMATION SUMMARY VIEW-->
+                    <Grid x:Name="infoSummaryView" x:FieldModifier="public" Grid.Row="0" Grid.Column="1" 
+                          Grid.RowSpan="3" Visibility="Collapsed" Padding="5" 
+                          Background="White">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
 
+                        <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="savedPhenoListView_NoteEdit" Padding="3 0" 
+                                  ItemsSource="{x:Bind PhenoMana.savedPhenotypes, Mode=OneWay}" Grid.Row="0" Grid.Column="0">
+                            <ListView.Header>
+                                <controls:ScrollHeader Mode="Sticky" TargetListViewBase="{x:Bind savedPhenoListView_NoteEdit}">
+                                    <StackPanel Background="White">
+                                        <TextBlock  Foreground="{StaticResource WORD_DARKER}" Text="Saved phenotypes" FontSize="16" 
+                                                    FontWeight="SemiBold" Padding="5"/>
+                                    </StackPanel>
+                                </controls:ScrollHeader>
+                            </ListView.Header>
+
+                            <ListView.ItemTemplate>
+                                <DataTemplate x:DataType="phenotypeservice:Phenotype">
+
+                                    <customcontrol:PhenotypeBriefControl2
+                                        VerticalAlignment="Center" phenotypeName="{x:Bind name}" 
+                                                                    phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" 
+                                                                    sourceType="{x:Bind sourceType}" presentPosition="List" />
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="ListViewItem">
+                                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                    <Setter Property="Margin" Value="0,0,0,0" />
+                                    <Setter Property="Padding" Value="5,0,0,0" />
+                                    <Setter Property="MinHeight" Value="20" />
+                                </Style>
+                            </ListView.ItemContainerStyle>
+                        </ListView>
+
+                        <Grid x:Name="speechQuickView_NoteEdit" x:FieldModifier="public" Grid.Row="0" Grid.Column="1" 
+                          Visibility="Visible" Padding="5" 
+                          Background="White">
+
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <local:ChatListView x:Name="chatView_NoteEdit" Grid.Row="0" Grid.Column="0"
+                                    IncrementalLoadingThreshold="2" Margin="10" 
+                                    BorderBrush="White" BorderThickness="2"
+                                    ScrollViewer.VerticalScrollBarVisibility="Visible">
+                                <ListView.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <ItemsStackPanel ItemsUpdatingScrollMode="KeepScrollOffset"  VerticalAlignment="Bottom"/>
+                                    </ItemsPanelTemplate>
+                                </ListView.ItemsPanel>
+
+                                <ListView.ItemContainerStyle>
+                                    <Style TargetType="ListViewItem">
+                                        <Setter Property="Padding" Value="0"/>
+                                        <Setter Property="Margin" Value="0"/>
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate>
+                                                    <ContentPresenter/>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </ListView.ItemContainerStyle>
+
+                                <ListView.ItemContainerTransitions>
+                                    <TransitionCollection/>
+                                </ListView.ItemContainerTransitions>
+
+                                <ListView.ItemTemplate>
+                                    <DataTemplate x:DataType="local:TextMessage">
+                                        <Grid Margin="6">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="Auto" />
+                                            </Grid.ColumnDefinitions>
+
+                                            <!--Finalized message color-->
+                                            <Grid
+                                    Grid.Row="0"
+                                    Grid.Column="{Binding TextColumn}"
+                                    Width="350"
+                                    CornerRadius="10"
+                                    Background="{Binding Converter={StaticResource bcConverter}}"
+                                    Visibility="{x:Bind Path=IsFinal}"/>
+
+                                            <!--Not finalized message color-->
+                                            <Grid
+                                    Grid.Row="0"
+                                    CornerRadius="10"
+                                    Grid.Column="{Binding TextColumn}"
+                                    Background="{StaticResource Background_Temp}"
+                                    Visibility="{x:Bind Path=IsNotFinal}"/>
+
+                                            <Grid 
+                                    Grid.Row="0"
+                                    Grid.Column="{Binding TextColumn}">
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="Auto"/>
+                                                    <RowDefinition Height="Auto"/>
+                                                    
+                                                </Grid.RowDefinitions>
+
+                                                <TextBlock
+                                                CanDrag="True"
+                                                DragStarting="ChatBubbleDragStarted"
+                                                Text="{x:Bind Body}"
+                                                Grid.Row="0"
+                                                Grid.Column="0"
+                                                TextWrapping="Wrap"
+                                                Width="300"
+                                                FontSize="18"
+                                                Padding="10"
+                                                HorizontalAlignment="Left"
+                                                VerticalAlignment="Center"
+                                                DoubleTapped="ChatBubbleDoubleTapped"
+                                                Tapped="ChatBubbleTapped"
+                                                Foreground="Black"/>
+
+                                                <TextBox
+                                                Grid.Row="0"
+                                                Grid.Column="0"
+                                                TextWrapping="Wrap"
+                                                PlaceholderText="{x:Bind Body}"
+                                                Visibility="Collapsed"
+                                                MinWidth="250"
+                                                MaxWidth="300"
+                                                FontSize="18"
+                                                Padding="10"/>
+
+
+                                                <Grid Grid.Row="2" 
+                                            Background="Transparent"
+                                            HorizontalAlignment="Stretch">
+
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="*"/>
+                                                        <ColumnDefinition Width="40"/>
+                                                    </Grid.ColumnDefinitions>
+
+                                                    <TextBlock
+                                            HorizontalAlignment="Center"
+                                            Grid.Column="0"
+                                            FontSize="12"
+                                            Text="{Binding Converter={StaticResource intervalConverter}}"
+                                            TextWrapping="Wrap"
+                                            Padding="3" 
+                                            VerticalAlignment="Center"
+                                            Foreground="Black"
+                                        />
+                                                    <TextBlock Grid.Column="2" Text="{x:Bind numPhenotype}" 
+                                                   HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+                                                </Grid>
+                                            </Grid>
+                                        </Grid>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </local:ChatListView>
+
+                        </Grid>
+                    </Grid>
                 </Grid>
             </SplitView.Pane>
             
@@ -665,7 +846,7 @@
                         </TransitionCollection>
                     </ContentControl.ContentTransitions>
                 </ContentControl>
-
+                
                 <Grid x:Name="placeHolderGrid" Grid.Column="2" />
 
                 <RelativePanel Grid.Row="0" Grid.ColumnSpan="3">
@@ -960,7 +1141,7 @@
 
                 </RelativePanel>
                 
-                
+             
                 
             </Grid>
             
