--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -742,7 +742,7 @@
                                             <Grid
                                     Grid.Row="0"
                                     Grid.Column="{Binding TextColumn}"
-                                    Width="350"
+                                    MaxWidth="350"
                                     CornerRadius="10"
                                     Background="{Binding Converter={StaticResource bcConverter}}"
                                     Visibility="{x:Bind Path=IsFinal}"/>
@@ -771,7 +771,7 @@
                                                 Grid.Row="0"
                                                 Grid.Column="0"
                                                 TextWrapping="Wrap"
-                                                Width="300"
+                                                MaxWidth="300"
                                                 FontSize="18"
                                                 Padding="10"
                                                 HorizontalAlignment="Left"
@@ -809,10 +809,13 @@
                                             TextWrapping="Wrap"
                                             Padding="3" 
                                             VerticalAlignment="Center"
-                                            Foreground="Black"
+                                            Foreground="Black" Visibility="Collapsed"
+                                                        
                                         />
                                                     <TextBlock Grid.Column="2" Text="{x:Bind numPhenotype}" 
-                                                   HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+                                                   HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                                                               Visibility="Collapsed"
+                                                               />
                                                 </Grid>
                                             </Grid>
                                         </Grid>
