--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -656,13 +656,17 @@
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-                        <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="savedPhenoListView_NoteEdit" Padding="3 0" 
-                                  ItemsSource="{x:Bind PhenoMana.savedPhenotypes, Mode=OneWay}" Grid.Row="0" Grid.Column="0">
+                        <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="phenoInNoteListView_NoteEdit" Padding="3 0" 
+                                  ItemsSource="{x:Bind PhenoMana.phenotypesInNote, Mode=OneWay}" Grid.Row="0" Grid.Column="0">
                             <ListView.Header>
-                                <controls:ScrollHeader Mode="Sticky" TargetListViewBase="{x:Bind savedPhenoListView_NoteEdit}">
+                                <controls:ScrollHeader Mode="Sticky" TargetListViewBase="{x:Bind phenoInNoteListView_NoteEdit}">
                                     <StackPanel Background="White">
-                                        <TextBlock  Foreground="{StaticResource WORD_DARKER}" Text="Saved phenotypes" FontSize="16" 
+                                        <TextBlock  Foreground="{StaticResource WORD_DARKER}" Text="Phenotypes in notes" FontSize="16" 
                                                     FontWeight="SemiBold" Padding="5"/>
                                     </StackPanel>
                                 </controls:ScrollHeader>
@@ -687,8 +691,57 @@
                             </ListView.ItemContainerStyle>
                         </ListView>
 
-                        <Grid x:Name="speechQuickView_NoteEdit" x:FieldModifier="public" Grid.Row="0" Grid.Column="1" 
-                          Visibility="Visible" Padding="5" 
+                        <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="phenoInSpeechListView_NoteEdit" Padding="3 0" 
+                                  ItemsSource="{x:Bind PhenoMana.medicalTerms, Mode=OneWay}" Grid.Row="1" Grid.Column="0"
+                                  IsItemClickEnabled="True" 
+                                  ItemClick="phenoInSpeechListView_NoteEdit_ItemClickAsync">
+                            <ListView.Header>
+                                <controls:ScrollHeader Mode="Sticky" TargetListViewBase="{x:Bind phenoInSpeechListView_NoteEdit}">
+                                    <StackPanel Background="White">
+                                        <TextBlock  Foreground="{StaticResource WORD_DARKER}" Text="Phenotypes in speech" FontSize="16" 
+                                                    FontWeight="SemiBold" Padding="5"/>
+                                    </StackPanel>
+                                </controls:ScrollHeader>
+                            </ListView.Header>
+
+                            <ListView.ItemTemplate>
+                                <DataTemplate x:DataType="phenotypeservice:MedicalTerm">
+                                    <Grid Margin="0 1 0 1" Name="NameGrid" HorizontalAlignment="Stretch">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto"></RowDefinition>
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"></ColumnDefinition>
+                                            <ColumnDefinition Width="40"></ColumnDefinition>
+                                        </Grid.ColumnDefinitions>
+                                        <customcontrol:PhenotypeBriefControl2 Grid.Column="0" Grid.Row="0"
+                                        VerticalAlignment="Center" phenotypeName="{x:Bind Text}" 
+                                                                    phenotypeId="{x:Bind Id}" 
+                                                                    sourceType="{x:Bind SourceType}"
+                                                                    messageIndex="{x:Bind MessageIndex}" 
+                                                                    medicalType="{x:Bind TypeId}"
+                                                                presentPosition="List" />
+
+                                        <Border Grid.Column="1" Grid.Row="0"
+                                            VerticalAlignment="Center" Height="40"
+                                        Background="{x:Null}" Style="{StaticResource ButtonStyle1}" >
+                                            <SymbolIcon Symbol="Forward" Foreground="Black" Opacity="0.6" />
+                                        </Border>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="ListViewItem">
+                                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                    <Setter Property="Margin" Value="0,0,0,0" />
+                                    <Setter Property="Padding" Value="5,0,0,0" />
+                                    <Setter Property="MinHeight" Value="20" />
+                                </Style>
+                            </ListView.ItemContainerStyle>
+                        </ListView>
+
+                        <Grid x:Name="speechQuickView_NoteEdit" x:FieldModifier="public" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2"
+                          Visibility="Visible" Padding="5"  
                           Background="White">
 
                             <Grid.RowDefinitions>
@@ -702,11 +755,13 @@
                                     IncrementalLoadingThreshold="2" Margin="10" 
                                     BorderBrush="White" BorderThickness="2"
                                     ScrollViewer.VerticalScrollBarVisibility="Visible">
+                                <!--
                                 <ListView.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <ItemsStackPanel ItemsUpdatingScrollMode="KeepScrollOffset"  VerticalAlignment="Bottom"/>
                                     </ItemsPanelTemplate>
                                 </ListView.ItemsPanel>
+                                -->
 
                                 <ListView.ItemContainerStyle>
                                     <Style TargetType="ListViewItem">
@@ -728,7 +783,7 @@
 
                                 <ListView.ItemTemplate>
                                     <DataTemplate x:DataType="local:TextMessage">
-                                        <Grid Margin="6">
+                                        <Grid Margin="6" >
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="Auto" />
                                             </Grid.RowDefinitions>
